--- a/AppRPG/AppRPG/User control/Competence.axaml
+++ b/AppRPG/AppRPG/User control/Competence.axaml
@@ -4,18 +4,18 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="AppRPG.User_control.Competence">
-            
-        <Grid RowDefinitions="2*,15*,1*" ColumnDefinitions="*" >
+
+    <Grid RowDefinitions="2*,15*,1*" ColumnDefinitions="*" >
         <Grid.Background>
             <ImageBrush Source="../TheAssets/image/BackgroundParchment.png"
                         Stretch="UniformToFill"
                         Opacity="0.8"/>
         </Grid.Background>
 
-         <Grid Grid.Row="0">
-             
-             <TextBlock FontWeight="Bold" FontSize="25" VerticalAlignment="Center" HorizontalAlignment="Center">CREATION DU HEROS</TextBlock>
-         </Grid>
+        <Grid Grid.Row="0">
+
+            <TextBlock FontWeight="Bold" FontSize="25" VerticalAlignment="Center" HorizontalAlignment="Center">CREATION DU HEROS</TextBlock>
+        </Grid>
         <Grid ColumnDefinitions="1*,5*,5*,5*,1*"  RowDefinitions="14*,1*" Grid.Row="1">
             <Grid RowDefinitions="4*,2*,2*,2*,10*" Grid.Column="1"  Margin="10,0">
                 <Grid.Background>
@@ -24,49 +24,49 @@
                                 Opacity="0.7"/>
                 </Grid.Background>
                 <TextBlock Grid.Row="0" Classes="middle h1" >Identité</TextBlock>
-                
+
                 <TextBlock Name="CharacterNameTextBlock" Grid.Row="1" Classes="middle h2"></TextBlock>
-                
+
                 <TextBlock Name="CharacterRaceTextBlock" Grid.Row="2" Classes="middle h2"></TextBlock>
                 <TextBlock Name="CharacterClassTextBlock" Grid.Row="3" Classes="middle h2"></TextBlock>
                 <Grid Grid.Row="4" Grid.RowDefinitions="1*,5*,2*">
                     <TextBlock Grid.Row="0" Name="RemainedTrows" Classes="middle h2"></TextBlock>
-                        <Grid Grid.Row="1" ColumnDefinitions="1*,1*">
-                            <Image Name="DiceImage1" Grid.Column="0"></Image>
-                            <Image Name="DiceImage2" Grid.Column="1"></Image>
-                        </Grid>
+                    <Grid Grid.Row="1" ColumnDefinitions="1*,1*">
+                        <Image Name="DiceImage1" Grid.Column="0"></Image>
+                        <Image Name="DiceImage2" Grid.Column="1"></Image>
+                    </Grid>
                     <Button Name="TrowDice" Grid.Row="2" Content="Lancer les dés" Classes="ready" Click="TrowDice_Click"></Button>
                 </Grid>
 
-                
+
             </Grid>
-            
+
             <Grid Grid.Column="2" Margin="10,0">
-                
+
                 <Grid.Background>
                     <ImageBrush Source="../TheAssets/image/BackgroundGrey.jpg"
                                 Stretch="UniformToFill"
                                 Opacity="0.7"/>
-                    
+
                 </Grid.Background>
-                
+
                 <Border>
                     <Image Name="ImageCharacter"></Image>
                 </Border>
-                
+
             </Grid>
-            
+
             <Grid Grid.Column="3" Margin="10,0">
-                
+
                 <Grid.Background>
                     <ImageBrush Source="../TheAssets/image/BackgroundFire.png"
                                 Stretch="UniformToFill"
                                 Opacity="0.7"/>
-                    
+
                 </Grid.Background>
-                
+
                 <Border>
-                    <Grid RowDefinitions="3*,2*,2*,2*,2*,2*,2*,2*,3*,1*,2*,1*">
+                    <Grid RowDefinitions="3*,2*,2*,2*,2*,2*,2*,2*">
                         <TextBlock Classes="middle h1" FontSize="16" Grid.Row="0">Atribut</TextBlock>
                         <TextBlock Name="RemainedPoints" Grid.Row="1" Classes="middle h2"></TextBlock>
                         <Grid Name="ForceGrid" Grid.Row="2" ColumnDefinitions="1*,1*,1*,1*">
@@ -98,16 +98,17 @@
                             <Button Grid.Column="1" Name="IntelligenceRemoveButton" Content="-" Classes="addAndRemove" Click="RemoveStat"></Button>
                             <TextBlock Name="IntelligenceTextBlock" Classes="middle bigboldBodyText" Grid.Column="2"></TextBlock>
                             <Button Grid.Column="3" Name="IntelligenceAddButton" Content="+" Classes="addAndRemove" Click="AddStat" ></Button>
-                        </Grid>   
-                    </Grid>
+                        </Grid>
+                        <Button Name="GoToResumeButton" Grid.Row="7" Click="GoToResume" Content="Voir la fiche du personnage" Classes="unready"></Button>
+                </Grid>
                 </Border>
-                
+
             </Grid>
         </Grid>
         <TextBlock Name="InformationBox" Grid.Row="2" Classes="middle boldBodyText"></TextBlock>
     </Grid>
     <UserControl.Styles>
-        
+
         <Style Selector="Button.Choix">
             <Setter Property="Background" Value="DarkGray"></Setter>
             <Setter Property="VerticalAlignment" Value="Center"></Setter>
@@ -169,7 +170,7 @@
             <Setter Property="BorderThickness" Value="1"></Setter>
             <Setter Property="BorderBrush" Value="#808080"></Setter>
         </Style>
-        
+
     </UserControl.Styles>
-    
+
 </UserControl>
